<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/home_white"
            android:title="@string/title_home"/>
    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/search_white"
            android:title="@string/title_search"/>
    <item
            android:id="@+id/navigation_library"
            android:icon="@drawable/ic_baseline_collections_bookmark_24"
            android:title="@string/library"/>

    <item
            android:id="@+id/navigation_downloads"
            android:icon="@drawable/main_dload_icon_navview"
            android:title="@string/downloads"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/settings_white"
            android:title="@string/title_settings"/>
</menu>