<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:nextFocusRight="@+id/cdi"
        android:nextFocusLeft="@+id/cdi"
        android:id="@+id/episode_result_root"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:layout_marginBottom="10dp"
>
<!--        android:layout_marginEnd="2.5dp"-->
<!--        android:layout_marginStart="2.5dp"-->
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:elevation="10dp"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:id="@+id/card_bg"
            android:background="@drawable/outline_background"
            app:cardBackgroundColor="?attr/backgroundColorDark"
    >
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
        >

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="@dimen/card_corner_radius_small"
            >

                <!-- USING CROP RATIO (182/268), centerCrop for fill -->
                <ImageView
                        android:id="@+id/video_thumbnail"
                        android:scaleType="centerCrop"
                        android:layout_width="142dp"
                        android:layout_height="80dp"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/video_thumbnail">
                </ImageView>
                <ImageView
                        android:scaleType="centerInside"
                        android:layout_width="142dp"
                        android:layout_height="80dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:src="@drawable/netflix_play_btt"
                        android:contentDescription="@string/video_play_button">
                </ImageView>
                <!-- STYLE HERE IS IMPORTANT OR ELSE IT WILL LOOK UGLY -->
                <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/video_progress"
                        android:layout_width="142dp"
                        android:indeterminate="false"
                        android:layout_gravity="start|bottom"
                        app:indicatorColor="@color/white"
                        android:layout_height="wrap_content">
                </com.google.android.material.progressindicator.LinearProgressIndicator>
            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/cardTitle"
                    android:textColor="?attr/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="160dp"
                    android:layout_marginEnd="50dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="3"
                    android:ellipsize="end"
            >
            </TextView>

            <ImageView android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:layout_margin="10dp"
                       android:src="@drawable/exo_icon_stop"
                       android:id="@+id/progressBarStop"
                       android:layout_gravity="end|center_vertical"
                       android:background="?android:attr/selectableItemBackgroundBorderless"
                       app:tint="@color/white"
                       android:visibility="gone"
                       android:contentDescription="@string/stop_download"/>

            <!--            <ProgressBar-->
            <!--                    android:layout_width="40dp"-->
            <!--                    android:layout_height="40dp"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent"-->
            <!--                    app:layout_constraintStart_toEndOf="@id/cardTitle"-->
            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
            <!--                    app:srcCompat="@drawable/netflix_download"-->
            <!--                    android:layout_margin="10dp"-->
            <!--                    android:id="@+id/cdi_loading"-->
            <!--                    tools:visibility="visible"-->
            <!--                    android:nextFocusRight="@+id/episode_result_root"-->
            <!--                    android:nextFocusLeft="@+id/episode_result_root"-->
            <!--                    android:layout_gravity="end|center_vertical"-->
            <!--                    android:visibility="gone"-->
            <!--                    android:contentDescription="@string/start_download"/>-->

            <!--                       app:srcCompat="@drawable/netflix_download"-->
            <ImageView android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_margin="15dp"
                       app:tint="?attr/white"
                       android:id="@+id/cdi"
                       tools:src="@drawable/netflix_download"
                       android:layout_gravity="end|center_vertical"
                       android:background="?android:attr/selectableItemBackgroundBorderless"
                       android:contentDescription="@string/start_download"/>
            <androidx.core.widget.ContentLoadingProgressBar
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    tools:visibility="visible"
                    android:id="@+id/progressBar"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:background="@drawable/circle_shape"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:layout_margin="10dp"
                    android:layout_gravity="end|center_vertical"
                    android:progress="0"
                    android:visibility="gone"
            />

            <!--            <ImageView android:layout_width="30dp" android:layout_height="30dp" android:layout_margin="10dp"-->
            <!--                       android:id="@+id/cardPauseIcon"-->
            <!--                       android:src="@drawable/exo_icon_stop"-->
            <!--                       app:tint="?attr/colorPrimary"-->
            <!--                       android:visibility="gone"-->
            <!--                       android:layout_gravity="end|center_vertical"-->
            <!--                       android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--                       android:contentDescription="@string/stop_download"/>-->

            <!--            <ImageView android:layout_width="30dp" android:layout_height="30dp" android:layout_margin="10dp"-->
            <!--                       android:id="@+id/cardRemoveIcon"-->
            <!--                       android:visibility="gone"-->
            <!--                       app:srcCompat="@drawable/ic_baseline_delete_24"-->
            <!--                       android:layout_gravity="end|center_vertical"-->
            <!--                       android:background="?android:attr/selectableItemBackgroundBorderless"-->
            <!--                       android:contentDescription="@string/remove_download"/>-->
            <!--
            <TextView
                    android:id="@+id/cardDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:layout_gravity="top"
                    android:layout_marginTop="20dp"
                    android:textFontWeight="200"
                    android:layout_marginStart="70dp"
            >
            </TextView>-->
        </FrameLayout>

        <TextView
                android:layout_marginTop="85dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/cardSummary"
                android:textColor="?attr/textColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="Naoto finds out that 12 years ago, the Tokyo Manji Gang had split into the Mikey Faction and the Draken Faction and due to one of their disputes, Draken ends up dying. Despite Naoto telling him this, Takemichi refuses to believe that Mikey and Draken would ever fight and goes back into the past to find out what caused the dispute and to save Draken. Takemichi renews his determination as he goes back in time yet again, but when he opens his eyes, he finds a girl he doesn`t know wearing just her underwear looking down on him."
        >
        </TextView>

    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>